[project]
name = "pg-db-conn-manager"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.3.3",
]

[tool.pyrefly]
project-excludes = [".venv/**"]
search-path = ["."]
python-interpreter = ".venv/Scripts/python.exe"
site-package-path = ".venv/lib/site-packages"
