[project]
name = "pg-db-conn-manager"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.3.3",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    {name = "QuentinDELRIVE", email = "quentindelrive@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/QuentinDelrive/pg-db-conn"
Issues = "https://github.com/QuentinDelrive/pg-db-conn/issues"

[tool.pyrefly]
project-excludes = [".venv/**"]
search-path = ["."]
python-interpreter = ".venv/Scripts/python.exe"
site-package-path = [".venv/lib/site-packages"]
